Updated pom.xml to supress java 9 reflection illegal access warnings